[catalog-activity] - Update contract to paginate results.
