# openapi/openapi-component_catalog-v1.0.0.yaml
@@ -449,6 +449,41 @@ paths:
           schema:
             type: string
             example: 'aSdFam...yCg=='
+        - name: project
+          in: query
+          description: Project key for the component.
+          required: true
+          example: 'PROJ-1'
+          schema:
+            type: string
+        - name: status
+          in: query
+          description: Provisioning status for the component.
+          required: true
+          example: CREATING
+          schema:
+            type: string
+            enum: [ CREATING, CREATED, FAILED, DELETING, UNKNOWN ]
+        - name: startDate
+          in: query
+          description: Start date for the filter based on creationDate at project component.
+          required: true
+          example: 1625097600000
+          schema:
+            type: integer
+            format: int64
+            example: 1625097600000
+            description: Timestamp in milliseconds since Unix epoch
+        - name: endDate
+          in: query
+          description: End date for the filter based on creationDate at project component.
+          required: true
+          example: 1783689224
+          schema:
+            type: integer
+            format: int64
+            example: 1783689224
+            description: Timestamp in milliseconds since Unix epoch
       responses:
         "200":
           description: A list of valid CatalogActivities.
